force-app/main/default/objects/People__x/fields/FavoriteFeature__c.field-meta.xml
<CustomField>
    <fullName>FavoriteFeature__c</fullName>
    <description>FavoriteFeature</description>
    <externalDeveloperName>FavoriteFeature</externalDeveloperName>
    <label>FavoriteFeature</label>
    <length>128</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>