force-app/main/default/objects/People__x/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <description>Features</description>
    <externalDeveloperName>Features</externalDeveloperName>
    <label>Features</label>
    <length>128</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>