force-app/main/default/objects/People__x/fields/HomeAddress__c.field-meta.xml
<CustomField>
    <fullName>HomeAddress__c</fullName>
    <description>HomeAddress</description>
    <externalDeveloperName>HomeAddress</externalDeveloperName>
    <label>HomeAddress</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>